--- a/PassIn.Exceptions/ExceptionMsg.resx
+++ b/PassIn.Exceptions/ExceptionMsg.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="NotFound" xml:space="preserve">
-    <value>Arquivo não localizado</value>
+  <data name="NotFoundAttendees" xml:space="preserve">
+    <value>Participante não localizado</value>
   </data>
 </root>
