--- a/PassIn.Exceptions/ExceptionMsg.resx
+++ b/PassIn.Exceptions/ExceptionMsg.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NotFoundAttendees" xml:space="preserve">
-    <value>Participante não localizado</value>
+    <value>Not Found Attendee</value>
   </data>
 </root>
