--- a/PassIn.Exceptions/ExceptionMsg.resx
+++ b/PassIn.Exceptions/ExceptionMsg.resx
@@ -118,7 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ErrorOrValidationNumberExcepition" xml:space="preserve">
-    <value>The number is invalid</value>
+    <value>Negative number is invalid</value>
+  </data>
+  <data name="ErrorOrValidationZeroExcepition" xml:space="preserve">
+    <value>The number zero is invalid</value>
   </data>
   <data name="NotFoundAttendees" xml:space="preserve">
     <value>Not Found Attendee</value>
